# InstaDrums

./: .gitignore  CMakeLists.txt  CODE_SIGNING_POLICY.md  README.md
.gitea/workflows/: build.yml
.github/workflows/: build.yml
.signpath/: config.yml
Source/: DrumPad.cpp  DrumPad.h  FxPanel.cpp  FxPanel.h  LookAndFeel.cpp  LookAndFeel.h  MasterPanel.cpp  MasterPanel.h  PadComponent.cpp  PadComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleEditorPanel.cpp  SampleEditorPanel.h  VuMeter.h  WaveformDisplay.cpp  WaveformDisplay.h
